# diet-optimization

./: .gitignore  .pre-commit-config.yaml  Containerfile  Makefile  NOTES.md  README.md  REFERENCES.md  pyproject.toml
.github/workflows/: deploy.yaml
benchmark/: benchmark_duckdb_csv.py  plot.py  run.py
data/: .gitignore  checksums.txt  example.csv  nutrient_map.csv  prices.csv  products.csv  recommendations.csv  recommendations_macro.csv  recommendations_nnr2023.csv  ssgrp_colors.csv  test_objectives.csv  unit_conversion.csv
data/recommendations_nnr2023/: levels_comparison_summary.csv  levels_upper_intake.csv  minerals_AI.csv  minerals_AR.csv  minerals_PAR.csv  minerals_RI.csv  protein_AR_and_RI.csv  sodium_RI.csv  vitamins_AI.csv  vitamins_AR.csv  vitamins_PAR.csv  vitamins_RI.csv
datacollection/: create_image_list.py  database.py  init_db.py  run_ocr.py  view_ocr_app.py
datacollection/templates/: image_page.html  index.html  validation_result.html
dietdashboard/: app.py  benchmark.py  data.py  example.py  explore.py  objective.py  plot_benchmark.py  show_benchmark.sh  static.py  test.py
dietdashboard/assets/: style.css
dietdashboard/experiments/: app_alpine.html  app_htmx.html  app_snabbdom.html
dietdashboard/experiments/htmx/: app.py
dietdashboard/experiments/htmx/templates/: index.html  result.html  sliders.html
dietdashboard/frontend/: .prettierrc.json  bundle.sh  index.js  package.json  pie.js  pnpm-lock.yaml  result.jsx  sliders.js  styles.css
dietdashboard/frontend/html/: base.html  comparison.html  dashboard.html  info.html
dietdashboard/frontend/html/partials/: currency_selector.html  head.html  header.html  (+6 more)
dietdashboard/frontend/js/: d3.js  defaultLocations.js  index.js  map.js  package.json  pie.js  pnpm-lock.yaml  reactivity.js  result.js  result.jsx  segments.js  sliders.js
dietdashboard/frontend/ts/: d3.ts  framework.ts  index.ts  map.ts  package.json  pie.ts  pnpm-lock.yaml  result.tsx  selectors.ts  sliders.ts
dietdashboard/queries/: calnut.sql  column_description.sql  drop.sql  load.sql  nutrient_map_update_ciqual.sql  post.sql  process.sql  products.sql  query.sql  recommendations.sql  static.sql  total.sql
dietdashboard/static/: .gitignore  d3.js  index.js  pie.js  result.js  sliders.css  sliders.js
dietdashboard/templates/: debug.html  index.html  info.html  result.html  sliders.html
dietlogger/: app.py
dietlogger/templates/: index.html
foodcomparison/: index.html  nutrients.py  start_server.sh  style.css
queries/: create_table_food.sql  create_table_price.sql  load.sql  nutrient_map_update_ciqual.sql  price_at_locations.sql  price_at_locations_comparison.sql  price_at_locations_other.sql  process.sql  process2.sql  query.sql  recommendations.sql  static.sql  update_nutrient_map_counts.sql
scripts/: app.py  check_currencies.py  ciqual_calnut_agribalyse_diff.py  ciqual_calnut_diff.py  ciqual_explore.py  ciqual_fetch.py  combine_and_optimize.py  comparison_app.py  db_info.py  extract_prices.py  gcloud_setup.sh  generate_pivot_query.py  hf_download.sh  illustrate_queries.py  livsmedelsdatabasen_explore.py  locations_summarize.py  make_ciqual_summary.py  nutrient_map_reformat.py  nutrients_fetch.py  package_sizes.py  prices_fetch.py  prices_summarize.py  products_extract.py  products_fetch.py  products_summarize.py  query_at_locations.py  recommendations_extract_tables.py  recommendations_fetch.py  recommendations_summarize_general.py  recommendations_summarize_per_age.py  recommentations_fetch.py  remote_repo_head_sha_date.sh  run_ocr.py  template_nutriments_query.py  transpose_exchange_rates.py  validate_staged_csv_data.py  view_ocr_app.py  xml_to_csv.py
scripts/nutrient_map/: nutrient_map_fetch.py  nutrient_map_reformat.py  nutrient_map_update_ciqual.py  nutrient_map_update_counts.py
scripts/recommendations_nnr2023/: recommendations_extract_tables.py  recommendations_fetch.py  recommendations_summarize_general.py  recommendations_summarize_per_age.py
scripts/templates/: image_page.html  index.html
utils/: image.py  table.py
(+16 files in other folders)
